--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -11,8 +11,8 @@ Build-Depends: cmake,
                libprotoc-dev,
                libprotobuf-dev,
                libignition-msgs9-dev,
-               libignition-cmake2-dev,
-               libignition-tools-dev,
+               libignition-cmake3-dev,
+               libignition-tools2-dev,
                libignition-utils2-cli-dev,
                libignition-utils2-dev,
                protobuf-compiler,
@@ -31,8 +31,8 @@ Depends: libignition-transport12 (= ${binary:Version}),
          uuid-dev,
          libzmq3-dev (>= 3.0.0),
          libignition-msgs9-dev,
-         libignition-cmake2-dev,
-         libignition-tools-dev,
+         libignition-cmake3-dev,
+         libignition-tools2-dev,
          libignition-utils2-cli-dev,
          libignition-utils2-dev,
          ${misc:Depends}
@@ -72,7 +72,7 @@ Package: libignition-transport12-log-dev
 Architecture: any
 Section: libdevel
 Depends: libsqlite3-dev,
-         libignition-cmake2-dev,
+         libignition-cmake3-dev,
          libignition-transport12-core-dev (= ${binary:Version}),
          libignition-transport12-log (= ${binary:Version}),
          ${misc:Depends}
