--- a/ubuntu/debian/rules
+++ b/ubuntu/debian/rules
@@ -23,6 +23,7 @@ override_dh_install:
 	dh_install --
 	# need to remove files present in components
 	$(RM) debian/libignition-transport*-core-dev/usr/include/ignition/transport*/ignition/transport/log.hh
+	$(RM) debian/libignition-transport*-core-dev/usr/include/ignition/transport*/gz/transport/log.hh
 	dh_missing --list-missing
 
 override_dh_auto_test:
