--- a/ubuntu/debian/tests/build
+++ b/ubuntu/debian/tests/build
@@ -10,12 +10,12 @@ WORKDIR=$(mktemp -d)
 trap "rm -rf $WORKDIR" 0 INT QUIT ABRT PIPE TERM
 cd $WORKDIR
 cat <<EOF > igntest.cc
-#include <ignition/transport.hh>
+#include <gz/transport.hh>
 
 int main()
 {
     // Create a transport node.
-    ignition::transport::Uuid uuid;
+    gz::transport::Uuid uuid;
     return 0;
 }
 EOF
