--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -20,7 +20,7 @@ Build-Depends: cmake,
                libzmq3-dev (>= 3.0.0),
                libsqlite3-dev
 Vcs-Browser: https://github.com/ignitionrobotics/ignition-transport
-Vcs-Git: https://github.org/ignition-relase/ign-transport12-release
+Vcs-Git: https://github.org/ignition-release/ign-transport12-release
 Standards-Version: 4.5.1
 Homepage: https://github.com/ignition-release/ign-transport
 
@@ -35,6 +35,7 @@ Depends: libignition-transport12 (= ${binary:Version}),
          libignition-tools2-dev,
          libignition-utils2-cli-dev,
          libignition-utils2-dev,
+         ${shlibs:Depends},
          ${misc:Depends}
 Multi-Arch: same
 Description: Ignition Robotics transport Library - Core Dev files
