--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -58,6 +58,7 @@ Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Suggests: gz-transport12-cli
 Breaks: libignition-transport12 (<< 11.999.999+nightly+git20220630+1r54abb8a6887e9137e6f703e51bbca2956efff773-1)
 Replaces: libignition-transport12 (<< 11.999.999+nightly+git20220630+1r54abb8a6887e9137e6f703e51bbca2956efff773-1)
 Multi-Arch: same
@@ -72,6 +73,24 @@ Description: Gazebo Transport Library - Shared library
  logging, 3D mesh management, and asynchronous message passing.
  .
  The package ships the Gazebo transport libraries
+
+Package: gz-transport12-cli
+Architecture: any
+Depends: libgz-transport12 (= ${binary:Version}),
+         ${shlibs:Depends},
+         ${misc:Depends}
+Multi-Arch: no
+Description: Gazebo transport Library - CLI
+ Gazebo transport library combines ZeroMQ with Protobufs to create a fast and
+ efficient message passing system. Asynchronous message publication and
+ subscription is provided along with service calls and discovery.
+ .
+ Gazebo is a set of simple libraries that provide useful
+ functionality to bootstrap robot applications. The included libraries
+ encapsulate all the essentials, such as common math data types, console
+ logging, 3D mesh management, and asynchronous message passing.
+ .
+ The package ships the CLI.
 
 Package: libgz-transport12-log-dev
 Architecture: any
@@ -169,6 +188,14 @@ Description: transitional package
 
 Package: libignition-transport12
 Depends: libgz-transport12, ${misc:Depends}
+Architecture: all
+Priority: optional
+Section: oldlibs
+Description: transitional package
+ This is a transitional package. It can safely be removed.
+
+Package: ignition-transport12-cli
+Depends: gz-transport12-cli, ${misc:Depends}
 Architecture: all
 Priority: optional
 Section: oldlibs
